# aspiGro

./: .env.sample  Cargo.toml  README.md
src/: app.rs  downloader.rs  header.rs  http_client.rs  load_env.rs  main.rs  models.rs  repo_fetcher.rs  repo_scanner.rs  running_mode.rs
src/domain/: services.rs
src/modules/: downloader.rs  load_env.rs  repo_fetcher.rs  running_mode.rs
src/utils/: config.rs  errors.rs  ui.rs
