[package]
name = "aspigro"
version = "1.0.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "fs"] }
futures = "0.3.31"
